* Add aggregate option on journal

Version 1.2 - 2014-07-01
* Changelog file creation