@@ -1,7 +1,10 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/form/notebook/page/field[@name='update_posted']" position="after">
+        <newline/>
         <label name="aggregate"/>
         <field name="aggregate"/>
+        <label name="aggregate_posting"/>
+        <field name="aggregate_posting"/>
     </xpath>
 </data>
