@@ -1,3 +1,4 @@
+* Add aggregate posting option on a journal
 * Add aggregate option on journal
 
 Version 1.2 - 2014-07-01
